# AIE7_local

00_Onramp/onramp01_Cursor_and_Git/: main.py
01_Prompt Engineering and Prototyping Best Practices/: Activities.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb
04_Production_RAG/: .gitignore  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: LangGraph_Synthetic_Data_Generation_EvolInstruct_Final.ipynb  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  langgraph_synthetic_data_evolinstruct_final.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
13_MCP/: .env.sample  ethereum_analytics_server.py  langgraph_app.py  langgraph_client.py  pyproject.toml  research_aggregator_server.py  server.py
14_LangGraph_Platform/: .gitignore  SOLUTIONS.md  pyproject.toml
15_A2A_LangGraph/: .gitignore  README.md  pyproject.toml
16_Production_RAG_and_Guardrails/: .gitignore  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
17_Deploying_Open_Source_Endpoints/: ENDPOINT_SETUP.md  endpoint_slammer.ipynb
(+15 files in other folders)
